src/test/vm/clsconstant_redecl1.php.exp
HipHop Fatal error: Cannot override previously defined constant A::FOO in B in src/test/vm/clsconstant_redecl1.php on line 9
