src/test/vm/clsconstant_redecl1.php
<?php

interface A {
  const FOO = 'FOO';
}

class B implements A {
  const FOO = 'BAR';
}
